chore: add hero section

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -4,6 +4,7 @@
 
 html, body {
   font-family: var(--font-norms);
+  color: var(--dark-green);
 }
 
 html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, code, em, img, small, strike, strong, sub, sup, tt, b, u, i, ol, ul, li, fieldset, form, label, table, caption, tbody, tfoot, thead, tr, th, td, main, canvas, embed, footer, header, nav, section, video{
@@ -49,6 +50,13 @@ input{
   border-radius: 0;
 }
 
+button {
+  font-family: var(--font-norms);
+}
+
 :root {
+  --dark-green: #{$dark-green};
   --mid-green: #{$mid-green};
+  --light-green: #{$light-green};
+  --deep-red: #{$deep-red};
 }
