chore: add base quiz styles

--- a/components/Quiz/Quiz.module.scss
+++ b/components/Quiz/Quiz.module.scss
@@ -1,47 +1,21 @@
-.hero {
+.quiz {
   @include gutters;
 
-  background-color: var(--mid-green);
-  background-image: none;
-
-  @include breakpoint-desktop {
-    background-image: url('/section1bg-min.jpg');
-    background-position: top center;
-    background-repeat: no-repeat;
-    background-size: cover
-  }
-
-  .content {
-    max-width: 470px;
-    padding: 90px 0;
-
-    @include breakpoint-desktop {
-      padding: 190px 0;
-    }
-
-    .title {
-      font-weight: 400;
-      font-size: 45px;
-      line-height: 45px;
-      text-wrap: balance;
-
-      @include breakpoint-tab-desktop {
-        font-size: 90px;
-        line-height: 90px;
-      }
-    }
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
   
-    .copy {
-      margin-top: 20px;
-      font-size: 18px;
-      line-height: 30px;
-    }
+  .exitButton {
+    cursor: pointer;
+    background-color: white;
+    border: 1px solid var(--deep-red);
+    color: var(--deep-red);
+    padding: 15px 30px;
+    margin: 26px 0 0 auto;
+    z-index: 2;
+    transition: background-color 0.5 ease-in;
 
-    .quizButton {
-      cursor: pointer;
-      padding: 15px 30px;
-      margin-top: 36px;
-      border: none;
+    &:hover {
       background-color: var(--deep-red);
       color: white;
     }
