--- a/components/Quiz/Quiz.module.scss
+++ b/components/Quiz/Quiz.module.scss
@@ -13,11 +13,14 @@
     padding: 15px 30px;
     margin: 26px 0 0 auto;
     z-index: 2;
-    transition: background-color 0.5 ease-in;
 
-    &:hover {
-      background-color: var(--deep-red);
-      color: white;
+    @include breakpoint-desktop {
+      transition: background-color 0.3ms ease-in;
+
+      &:hover {
+        background-color: var(--deep-red);
+        color: white;
+      }
     }
   }
 }
