--- a/components/Quiz/QuizQuestion.module.scss
+++ b/components/Quiz/QuizQuestion.module.scss
@@ -1,29 +1,19 @@
 .quizQuestion {
 
   .questionLabel {
+    display: block;
     position: relative;
     z-index: 2;
+
+    &[data-selected="true"] {
+      border: 2px solid red;
+    }
   }
 
-  .inputLabelImage,
-  .inputLabel {
-    pointer-events: none;
-  }
-  /* HIDE RADIO */
-  [type=radio] { 
+  .questionInput { 
     position: absolute;
     opacity: 0;
     width: 0;
     height: 0;
-  }
-
-  /* IMAGE STYLES */
-  [type=radio] + img {
-    cursor: pointer;
-  }
-
-  /* CHECKED STYLES */
-  [type=radio]:checked + img {
-    outline: 2px solid #f00;
   }
 }
