chore: add base results component and firm up logic

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -59,4 +59,6 @@ button {
   --mid-green: #{$mid-green};
   --light-green: #{$light-green};
   --deep-red: #{$deep-red};
+  --mid-grey: #{$mid-grey};
+  --light-grey: #{$light-grey};
 }
