--- a/components/Quiz/QuizQuestion.module.scss
+++ b/components/Quiz/QuizQuestion.module.scss
@@ -1,16 +1,63 @@
 .quizQuestion {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 0;
+
+  .questions {
+    &:has(img) {
+      display: grid;
+      gap: 12px;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      max-width: 400px;
+
+      @include breakpoint-desktop {
+        max-width: unset;
+      }
+    }
+  }
+
+  .inputLabelImage {
+    border-radius: 20px;
+    border: 1px solid var(--mid-grey);
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    align-items: center;
+    max-width: 150px;
+
+    span {
+      padding-top: 8px;
+      font-size: 12px;
+    }
+
+    @include breakpoint-desktop {
+      max-width: unset;
+
+      span {
+        font-size: 16px;
+      }
+    }
+  }
 
   .questionLabel {
+    border-radius: 20px;
+    cursor: pointer;
     display: block;
     position: relative;
     z-index: 2;
 
     &[data-selected="true"] {
-      border: 2px solid red;
+      box-shadow: 0px 0px 4px 1px var(--dark-green);
+    }
+
+    &:hover {
+      background-color: var(--light-grey);
     }
   }
 
-  .questionInput { 
+  .questionInput {
     position: absolute;
     opacity: 0;
     width: 0;
