--- a/components/Quiz/QuizQuestion.module.scss
+++ b/components/Quiz/QuizQuestion.module.scss
@@ -8,10 +8,14 @@
   .questionTitle {
     font-size: 20px;
     text-wrap: balance;
+
+    @include breakpoint-desktop {
+      font-size: 30px;
+    }
   }
 
   .questions {
-    margin-top: 50px;
+    margin-top: 40px;
 
     &:has(img) {
       display: grid;
@@ -42,6 +46,7 @@
     border-radius: 10px;
     border: 1px solid var(--mid-grey);
     padding: 10px 20px;
+    font-size: 16px;
     max-width: 480px;
     width: 100%;
     transition: background-color 0.3ms ease-in;
@@ -50,6 +55,10 @@
       &:hover {
         background-color: var(--light-grey);
       }
+    }
+
+    @include breakpoint-desktop {
+      font-size: 20px;
     }
   }
 
@@ -92,10 +101,6 @@
       .inputLabelImage,
       .inputLabel {
         box-shadow: 0px 0px 6px 2px var(--dark-green);
-
-        // &:hover {
-        //   background-color: var(--light-grey);
-        // }
       }
     }
   }
