--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -10,7 +10,7 @@ $screen-desktop-min: 992px;
 $screen-xl-desktop-min: 1200px;
 
 @mixin breakpoint-mob-tab {
-  @media (min-width: #{screen-mob-tab-min}) {
+  @media (min-width: #{$screen-mob-tab-min}) {
       @content;
   }
 }
