chore: add footer

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -57,6 +57,8 @@ button {
 :root {
   --dark-green: #{$dark-green};
   --mid-green: #{$mid-green};
+  --mild-green: #{$mild-green};
+  --milder-green: #{$milder-green};
   --light-green: #{$light-green};
   --deep-red: #{$deep-red};
   --mid-grey: #{$mid-grey};
