--- a/components/Help/Help.module.scss
+++ b/components/Help/Help.module.scss
@@ -73,6 +73,11 @@
     .image {
       max-width: 375px;
       width: 100%;
+
+      img {
+        height: auto;
+        width: 100%;
+      }
     }
 
     .info {
