--- a/styles/_colours.scss
+++ b/styles/_colours.scss
@@ -1,5 +1,7 @@
 $dark-green: #0B3B3C;
 $mid-green: #A8B6A3;
+$mild-green: #6D8A83;
+$milder-green: #BDCDC5;
 $light-green: #E8EFE9;
 $deep-red: #7E0707;
 $mid-grey: #D3D3D3;
