--- a/components/Quiz/QuizQuestion.module.scss
+++ b/components/Quiz/QuizQuestion.module.scss
@@ -7,10 +7,12 @@
 
   .questionTitle {
     font-size: 20px;
+    line-height: 25px;
     text-wrap: balance;
 
     @include breakpoint-desktop {
       font-size: 30px;
+      line-height: 40px;
     }
   }
 
