--- a/components/Results/Results.module.scss
+++ b/components/Results/Results.module.scss
@@ -12,6 +12,7 @@
     flex-direction: column;
     gap: 20px;
     font-size: 20px;
+    line-height: 40px;
     text-align: center;
 
     .title {
